# novic

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
scripts/: build-deb.sh  build-rpm.sh
src/: main.cpp
